Front-end imporovement

--- a/staffcheck-frontend/src/app/dashboard/dashboard.component.html
+++ b/staffcheck-frontend/src/app/dashboard/dashboard.component.html
@@ -2,23 +2,23 @@
   <h1 class="mb-4">Dashboard</h1>
   <div class="row">
     <div class="col-md-4">
-      <div class="card text-white bg-primary mb-3">
+      <div class="card text-primary card1 mb-3">
         <div class="card-body">
-          <h5 class="card-title"><i class="fas fa-users"></i> {{numberOfEmployees}} Employees</h5>
+          <h5 class="card-title"><i class="fas fa-users fa-lg fas1"></i> {{numberOfEmployees}} Employees</h5>
         </div>
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card text-white bg-success mb-3">
+      <div class="card text-warning  mb-3 card2">
         <div class="card-body">
-          <h5 class="card-title"><i class="fas fa-tasks"></i> 15 Projects</h5>
+          <h5 class="card-title"><i class="fas fa-tasks fa-lg fas2"></i> 15 Projects</h5>
         </div>
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card text-white bg-danger mb-3">
+      <div class="card text-success card3 mb-3">
         <div class="card-body">
-          <h5 class="card-title"><i class="fas fa-user-friends"></i> 23 Clients</h5>
+          <h5 class="card-title"><i class="fas fa-user-friends fa-lg fas3"></i> 23 Clients</h5>
         </div>
       </div>
     </div>
