--- a/staffcheck-frontend/src/app/sidebar/sidebar.component.html
+++ b/staffcheck-frontend/src/app/sidebar/sidebar.component.html
@@ -1,24 +1,24 @@
-<nav id="sidebar" class="sidebar">
+<nav id="sidebar" class="sidebar ">
     <div class="position-sticky">
         <div class="sidebar-header">
-            <div class="barcode-text">StaffCheck</div>
-            <hr class="sidebar-divider">
+            <div class="barcode-text"><i class="fas fa-qrcode text-primary"></i> StaffCheck</div>
+<!--            <hr class="sidebar-divider">-->
         </div>
         <ul class="nav flex-column sidebar-items">
             <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" routerLink="/admin/dashboard">
+                <a class="nav-link active text-black" aria-current="page" routerLink="/admin/dashboard">
                     <i class="fas fa-home"></i>
                     Dashboard
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" routerLink="/admin/employees">
+                <a class="nav-link text-black" routerLink="/admin/employees">
                     <i class="fas fa-users"></i>
                     Users
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" routerLink="/admin/attendance">
+                <a class="nav-link text-black" routerLink="/admin/attendance">
                     <i class="fas fa-calendar-check"></i>
                     Attendance
                 </a>
@@ -26,7 +26,7 @@
 
 
             <li class="nav-item">
-                <a class="nav-link text-white" routerLink="/admin/mark">
+                <a class="nav-link text-black" routerLink="/admin/mark">
                     <i class="fas fa-qrcode"></i>
                     Scanner
                 </a>
