--- a/staffcheck-frontend/src/app/login/login.component.html
+++ b/staffcheck-frontend/src/app/login/login.component.html
@@ -1,25 +1,34 @@
 <div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="text-center mb-4 barcode-text2 text-dark">
-        StaffCheck
-      </div>
-      <div class="card shadow-lg border-0 bg-dark text-white">
-        <div class="card-header bg-secondary text-white text-center">
-          <h4 class="mb-0">Login</h4>
-        </div>
-        <div class="card-body">
-          <form [formGroup]="formLogin" (ngSubmit)="handleLogin()">
-            <div class="mb-3">
-              <label for="username" class="form-label">Username</label>
-              <input type="text" id="username" class="form-control bg-dark text-white border-secondary" formControlName="username" />
+  <div class="row">
+    <!-- Image Section -->
+    <div class="col-md-6 d-none d-md-block">
+      <img src="public/loginimage.png" alt="Background Image" class="img-fluid" height="1332" width="2000" >
+
+    </div>
+    <!-- Login Form Section -->
+    <div class="col-md-6 d-flex align-items-center justify-content-center">
+      <div class="login-form-container">
+
+        <div class="card shadow-lg border-0 bg-light">
+          <div class="card-header bg-light text-center">
+            <div class="text-center mb-4 barcode-text3 text-dark">
+              <i class="fas fa-qrcode text-primary"></i> StaffCheck
             </div>
-            <div class="mb-3">
-              <label for="password" class="form-label">Password</label>
-              <input type="password" id="password" class="form-control bg-dark text-white border-secondary" formControlName="password" />
-            </div>
-            <button type="submit" class="btn btn-secondary w-100">Login</button>
-          </form>
+<!--            <h4 class="mb-0">Login</h4>-->
+          </div>
+          <div class="card-body">
+            <form [formGroup]="formLogin" (ngSubmit)="handleLogin()">
+              <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" id="username" class="form-control bg-light " placeholder="Type username" formControlName="username" />
+              </div>
+              <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" id="password" class="form-control bg-light " placeholder="Type password" formControlName="password" />
+              </div>
+              <button type="submit" class="btn btn-info w-100">Login</button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
