--- a/staffcheck-frontend/src/styles.css
+++ b/staffcheck-frontend/src/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&display=swap'); /* styles.css */
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Pacifico&display=swap');
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 @import '../node_modules/bootstrap-icons/font/bootstrap-icons.min.css';
 @import '../node_modules/@fortawesome/fontawesome-free/css/all.css';
@@ -52,10 +52,13 @@ body {
   left: 0;
   width: 250px; /* Adjust as needed */
   height: 100%;
-  background-color: #333; /* Example color */
+  background-color: white; /* Example color */
   transition: transform 0.3s ease-in-out;
   transform: translateX(-250px); /* Hide sidebar by default */
+  border-right: 1px solid rgba(128, 128, 128, 0.3); /* Add gray right border */
+
 }
+
 
 .sidebar.open {
   transform: translateX(0); /* Show sidebar when open */
@@ -71,19 +74,21 @@ body {
   padding: 15px;
   text-align: center;
   position: relative; /* Add relative positioning */
+  margin-top: 10%;
 }
 
 .barcode-text {
-  font-family: 'Libre Barcode 128 Text', system-ui;
-  font-size: 45px; /* Adjust as needed */
+  font-family: "Pacifico", cursive;
+  font-size: 30px; /* Adjust as needed */
   text-align: center;
   position: absolute; /* Add relative positioning */
   top: -3px; /* Adjust vertical alignment */
-  color: white;
-left: 20%;
+  color: black;
+left: 10%;
+
 }
 .barcode-text2 {
-  font-family: 'Libre Barcode 128 Text', system-ui;
+  font-family: "Pacifico", cursive;
   font-size: 100px; /* Adjust as needed */
 
    /* Add relative positioning */
@@ -101,7 +106,7 @@ left: 20%;
 }
 
 .sidebar-items {
-  margin-top: -10px; /* Space between header and items */
+  margin-top: 20%; /* Space between header and items */
 }
 
 .sidebar-items .nav-item {
@@ -110,6 +115,7 @@ left: 20%;
   transition: opacity 0.3s ease;
   border-radius: 8px; /* Rounded corners */
   padding: 10px 15px; /* Padding inside items */
+
 }
 
 .sidebar-items .nav-link {
